[package]
name = 'helloextendr'
version = '0.3.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'helloextendr'


[dependencies]
extendr-api = {git = "https://github.com/rpolars/extendr", branch = "multi_proc"}
#extendr-engine = {git = "https://github.com/rpolars/extendr", branch = "multi_proc"}
extendr-engine = {path = "../../../extendr_rpolars/extendr-engine"}